Force word break on long workfile names in deletion alert dialog [fixes #27474955]

--- a/scss/modals/_alert.scss
+++ b/scss/modals/_alert.scss
@@ -12,6 +12,7 @@
             .left {
                 float: left;
                 max-width: 360px;
+                word-wrap: break-word;
                 @include after-clearfix;
 
                 h1 {
